# cottus-runtime

./: .gitignore  LICENSE  README.md  pyproject.toml  release_notes.txt  setup.py
.github/workflows/: ci.yml  publish.yml
cottus/: __init__.py  model.py
cottus/csrc/: block_allocator.cpp  block_allocator.h  compute_primitives_cpu.cpp  compute_primitives_cpu.h  compute_primitives_cuda.cu  compute_primitives_cuda.h  engine.cpp  engine.h  generic_transformer.cpp  generic_transformer.h  page_table.cpp  page_table.h  paged_attention_cpu.cpp  paged_attention_cpu.h  paged_attention_cuda.cu  paged_attention_cuda.h  pybind_wrapper.cpp
examples/: 1_basic_inference.py  2_cpu_inference.py  3_tinyllama_real.py  4_long_context.py
tests/: test_hf_parity.py
